addition of wordrank parameter

--- a/README.Rmd
+++ b/README.Rmd
@@ -1,7 +1,5 @@
 ---
 title: "easyGlove"
-author: "Hanjo Odendaal"
-date: "11/04/2022"
 output: github_document
 editor_options: 
   chunk_output_type: console
@@ -46,6 +44,7 @@ set.seed(1)
 word_vectors <- model_glove(out, ngrams = 2,
                    term_count_min = 5,
                    skip_grams_window = 10L,
+                   wordrank = 50,
                    runs = 10,
                    cores = 14)
 
