--- a/README.Rmd
+++ b/README.Rmd
@@ -45,6 +45,8 @@ word_vectors <- model_glove(out, ngrams = 2,
                    embedding_dim = 20, 
                    co_oc_max = 10, 
                    runs = 10,
+                   learning_rate = 0.001,
+                   alpha = 0.75,
                    cores = parallel::detectCores() - 1,
                    verbose = TRUE)
 
